# zotifyForked

./: INSTALLATION.md  README.md  pyproject.toml  requirements.txt
zotify/: __init__.py  __main__.py  api.py  app.py  config.py  const.py  termoutput.py  utils.py
